# sir-bot-a-lot

./: .bumpversion.cfg  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  AUTHORS.md  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  Dockerfile-dev  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  Procfile  README.md  README.rst  config.yml  docker-compose.yml  docker.yml  example.py  mkdocs.yml  requirements.txt  requirements_dev.txt  run.py  setup.cfg  setup.py  sirbot.yml  swagger.json  tox.ini
.docker/base/: .vimrc  .zshenv  .zshrc  Dockerfile  Makefile
.docker/gunicorn/: Dockerfile  Makefile  gunicorn_config.py
config/: config.yml
docs/: authors.rst  conf.py  configuration.rst  contributing.rst  facade.rst  history.rst  index.rst  installation.rst  make.bat  modules.rst  plugins.rst  quickstart.rst  readme.rst  references.rst  usage.rst
examples/: README.rst
requirements/: development.txt  production.txt  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt
sirbot/: __init__.py  __meta__.py  api.py  base.py  channel.py  cli.py  client.py  core.py  dispatcher.py  errors.py  facade.py  hookimpl.py  hookspecs.py  iterable_queue.py  message.py  plugin.py  queue.py  receiver.py  user.py  utils.py
tasks/: __init__.py  base.py  helpers.py
tests/: conftest.py  test_cli.py  test_client.py  test_config.yml  test_core.py  test_dice.py  test_dispatcher.py  test_errors.py  test_facade.py  test_message.py  test_receiver.py  test_sirbot.py  test_utils.py
(+46 files in other folders)
